# fluent-bit-logcheck

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  example-fluent-bit.conf  help.html  index.html  release-plz.toml  settings.html  src-files.js
.cargo/: config.toml
.github/actions/archlinux-run/: action.yml
.github/workflows/: archlinux-packages.yml  build-and-test.yml  container.yml  docs.yml  release-plz.yml  release.yml  test-logcheck-rules.yml
cli/: cli-reference.md
cli/man/: logcheck-filter.1
logcheck_filter/: all.html  fn.main.html  fn.run.html  index.html
logcheck_fluent_bit_filter/: all.html  fn.apply_logcheck_rules.html  fn.create_filtered_entry.html  fn.logcheck_demo_json.html  fn.logcheck_filter_json.html  fn.parse_log_entry.html  fn.to_c_string.html  index.html  sidebar-items.js  static.LOGCHECK_DB.html  struct.LogEntry.html
logcheck_fluent_bit_filter/cli/: index.html  sidebar-items.js  type.Result.html
logcheck_fluent_bit_filter/cli/analyzer/: index.html  struct.UnmatchedCollector.html
logcheck_fluent_bit_filter/cli/args/: enum.InputSource.html  enum.JournaldMode.html  enum.OutputFormat.html  enum.ShowMode.html  index.html  sidebar-items.js  struct.Cli.html
logcheck_fluent_bit_filter/cli/input/: fn.create_input.html  index.html  trait.LogInput.html
logcheck_fluent_bit_filter/cli/output/: fn.create_output.html  index.html  struct.FilteredEntry.html  trait.LogOutput.html
logcheck_fluent_bit_filter/cli/processor/: index.html  struct.LogProcessor.html  struct.ProcessingStats.html
logcheck_fluent_bit_filter/regex_conversion/: fn.ensure_anchors.html  fn.modern_to_posix.html  fn.posix_to_modern.html  fn.posix_to_rust.html  fn.remove_anchors.html  index.html  static.POSIX_ONLY_CONVERSIONS.html  static.REGEX_CONVERSIONS.html  struct.RegexConversion.html
logcheck_fluent_bit_filter/rules/: enum.CompiledRules.html  enum.RuleCategory.html  enum.RuleError.html  index.html  struct.LogcheckDatabase.html  struct.RuleSet.html
pkgbuild/: .gitignore  IMPLEMENTATION.md  README.md  generate-pkgbuilds.sh  update-checksums.sh  update-srcinfo.sh
pkgbuild/fluent-bit-logcheck-filter/: .SRCINFO  PKGBUILD  README.md
pkgbuild/logcheck-database/: .SRCINFO  PKGBUILD  README.md
pkgbuild/logcheck-filter/: .SRCINFO  PKGBUILD  README.md
pkgbuild/templates/fluent-bit-logcheck-filter-bin/: PKGBUILD
pkgbuild/templates/fluent-bit-logcheck-filter-git/: PKGBUILD
pkgbuild/templates/logcheck-database/: PKGBUILD
pkgbuild/templates/logcheck-filter-bin/: PKGBUILD
pkgbuild/templates/logcheck-filter-git/: PKGBUILD
pr-preview/pr-1/logcheck_fluent_bit_filter/: all.html  fn.apply_logcheck_rules.html  struct.LogEntry.html
pr-preview/pr-1/search.index/: 0377527034a7.js  059e8c094cee.js  05c5a011c6bb.js  0c20acaafbb3.js  0d059f9c8166.js  0dc8c1d9e7eb.js  0e28bc2d1c24.js  1275444cdace.js  1321e3aa5877.js  154b4bcbc06f.js  19ba3fda01fc.js  1b4d151e2dd8.js  1fda95805606.js  20213bed7fdd.js  208b8d801f47.js  27bdcaaa01f9.js  27fae4a7b4a1.js  31c873ef9c04.js  387bf983c894.js  431ea74e2760.js  48969b8a6400.js  root.js  (+13 more)
pr-preview/pr-10/: help.html
pr-preview/pr-12/: settings.html
pr-preview/pr-15/: crates.js  settings.html
pr-preview/pr-16/: src-files.js
pr-preview/pr-44/: help.html  settings.html
pr-preview/pr-63/: index.html
pr-preview/pr-9/: index.html
scripts/: update-pkgbuild-version.sh
search.index/: 02a6fb3703e2.js  0327af7b520b.js  03e9527e5089.js  074449adc2b2.js  09965e1e2c77.js  0b283ceed410.js  0d93da536a9c.js  1133052860c5.js  11d044ddf9d7.js  147037f35414.js  153b55aeefce.js  15bb06c189b1.js  1a123a66e515.js  247b476129db.js  2bdf9f3b8a65.js  2e5262ff3550.js  2e6669d7ed17.js  30732ad5b920.js  3146f9a12e23.js  339f63243465.js  341a0817f987.js  34f6dffbbf42.js  35a9760dd298.js  35c52ddba3bc.js  36421f47671c.js  3b4b5411747f.js  3c9bcf1c8d41.js  3cde60b7bd6f.js  3d0a59fa440e.js  3e3d0724c792.js  4003c5413e89.js  4188bdf7acec.js  483085870564.js  4a0671249bef.js  4a6bf11ae2a3.js  4d80b014d5fe.js  4fbfcf2c8302.js  51aaafd51742.js  5357c4401f35.js  5c2b44a66c20.js  (+23 more)
search.index/entry/: 1fb9f5a6d639.js  518719f695c3.js
search.index/function/: c865b9f9d7c4.js  cd04b01e4f51.js
search.index/generic_inverted_index/: 7ce88a05782c.js  be54bad49b59.js
search.index/name/: 112c13ac0171.js
src/: external_test.rs  lib.rs  main.rs  production_test.rs  regex_conversion.rs  rules.rs
src/cli/: args.rs  mod.rs  processor.rs
src/logcheck_filter/: main.rs.html
src/logcheck_fluent_bit_filter/: lib.rs.html  regex_conversion.rs.html  rules.rs.html
xtask/: Cargo.toml
xtask/.cargo/: config.toml
xtask/src/: main.rs
(+729 files in other folders)
