[package]
name = "logcheck-fluent-bit-filter"
version = "0.1.0"
edition = "2024"
description = "Fluent-Bit WASM filter and CLI tool for logcheck-rule based filtering"

[lib]
# Fluentbit WASM filters have to be built as a library that function names
# are searched for within
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "logcheck-filter"
path = "src/main.rs"

[dependencies]
# MessagePack support (for WASM filter)
rmp = "0.8.15"
rmpv = "1.3.1"

# JSON support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for logcheck rules
regex = "1.12"

# Static initialization for compiled rules
once_cell = "1.21"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "2"
colored = "3"

# Journald integration (pure Rust)
journald-export-parser-rs = "0.1.0"

[dev-dependencies]
tempfile = "3.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
